--- a/pages/contato.html
+++ b/pages/contato.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="imagens/logo_simbolo.png" alt="Logo da Empresa">
+            <img src="../imagens/logo_simbolo.png" alt="Logo da Empresa">
         </div>
         <div class="company-info">
             <h1>Ecofocus - Sustentabilidade para o Planeta</h1>
