adição de favicon

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecofocus - Sustentabilidade para o Planeta</title>
+    <title>EcoFocus - Sustentabilidade para o Planeta</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/script.js" defer></script>
+    <link rel="icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <img src="../imagens/logo_simbolo.png" alt="Logo da Empresa">
         </div>
         <div class="company-info">
-            <h1>Ecofocus - Sustentabilidade para o Planeta</h1>
+            <h1>EcoFocus - Sustentabilidade para o Planeta</h1>
             <p>Cuide do Planeta, Cuide do Futuro</p>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">
@@ -30,10 +31,10 @@
     </header>
 
     <section id="about">
-        <h2>Sobre o Ecofocus</h2>
+        <h2>Sobre o EcoFocus</h2>
         <p>Conheça mais sobre nossa missão e compromisso com a sustentabilidade.</p>
         <p>
-            A Ecofocus é muito mais do que uma solução tecnológica; 
+            A EcoFocus é muito mais do que uma solução tecnológica; 
             é o resultado da paixão compartilhada por tecnologia e 
             sustentabilidade de nossa equipe de desenvolvedores dedicados. 
             Em nossa jornada para criar uma plataforma inovadora que une 
@@ -43,7 +44,7 @@
         </p>
         
         <p>
-        Em nossas próprias palavras, a Ecofocus nasceu da convicção de que a 
+        Em nossas próprias palavras, a EcoFocus nasceu da convicção de que a 
         tecnologia pode ser uma força positiva para o meio ambiente. Cada membro 
         de nossa equipe, impulsionado por um profundo entendimento das questões 
         ambientais, traz consigo a missão de integrar práticas sustentáveis em 
@@ -62,7 +63,7 @@
         </p>
 
         <p>
-        A Ecofocus é uma manifestação tangível de nossa visão compartilhada: 
+        A EcoFocus é uma manifestação tangível de nossa visão compartilhada: 
         liderar a revolução da tecnologia sustentável. Ao integrar monitoramento
         ambiental em tempo real, gestão eficiente de resíduos e otimização da 
         produção, estamos impulsionando uma transformação que transcende as 
@@ -72,21 +73,21 @@
 
         <p>
         Cada linha de código que escrevemos é um passo em direção a um futuro 
-        onde empresas prosperam em harmonia com a natureza. A Ecofocus não é 
+        onde empresas prosperam em harmonia com a natureza. A EcoFocus não é 
         apenas uma solução; é um compromisso, uma promessa de que, através da 
         tecnologia, podemos construir um mundo onde a inovação não sacrifica o 
         meio ambiente, mas sim o preserva para as gerações futuras.
         </p>
         
         <p>
-        Convidamos você a se unir a nós nesta jornada. Descubra a Ecofocus, 
+        Convidamos você a se unir a nós nesta jornada. Descubra a EcoFocus, 
         uma expressão de nossa paixão por um futuro sustentável, onde a 
         tecnologia e a responsabilidade ambiental caminham de mãos dadas.
         </p>
     </section>
 
     <footer>
-        <p>Ecofocus - Sustentabilidade para o Planeta</p>
+        <p>EcoFocus - Sustentabilidade para o Planeta</p>
         <p>Todos os direitos reservados ©️2023</p>
     </footer>
 </body>
