--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecofocus - Sustentabilidade para o Planeta</title>
+    <title>EcoFocus - Sustentabilidade para o Planeta</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/script.js" defer></script>
+    <link rel="icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
             <img src="../imagens/logo_simbolo.png" alt="Logo da Empresa">
         </div>
         <div class="company-info">
-            <h1>Ecofocus - Sustentabilidade para o Planeta</h1>
+            <h1>EcoFocus - Sustentabilidade para o Planeta</h1>
             <p>Cuide do Planeta, Cuide do Futuro</p>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">
@@ -53,7 +54,7 @@
     </section>
     
     <footer>
-        <p>Ecofocus - Sustentabilidade para o Planeta</p>
+        <p>EcoFocus - Sustentabilidade para o Planeta</p>
         <p>Todos os direitos reservados ©️2023</p>
     </footer>
 </body>
