--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecofocus - Sustentabilidade para o Planeta</title>
+    <title>EcoFocus - Sustentabilidade para o Planeta</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
+    <link rel="icon" href="imagens/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
@@ -15,7 +17,7 @@
             <img src="imagens/logo_simbolo.png" alt="Logo da Empresa">
         </div>
         <div class="company-info">
-            <h1>Ecofocus - Sustentabilidade para o Planeta</h1>
+            <h1>EcoFocus - Sustentabilidade para o Planeta</h1>
             <p>Cuide do Planeta, Cuide do Futuro</p>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">
@@ -30,7 +32,7 @@
     </header>
 
     <section id="home">
-        <h2>Bem-vindo ao Ecofocus</h2>
+        <h2>Bem-vindo ao EcoFocus</h2>
         <p>Nosso compromisso é promover práticas sustentáveis para preservar o planeta. Junte-se a nós nessa jornada
             e faça a diferença!</p>
     
@@ -79,7 +81,7 @@
     </section>
     
     <footer>
-        <p>Ecofocus - Sustentabilidade para o Planeta</p>
+        <p>EcoFocus - Sustentabilidade para o Planeta</p>
         <p>Todos os direitos reservados ©️2023</p>
     </footer>
 </body>
